Fix banner on smaller screens and landscape

--- a/src/_assets/style.css
+++ b/src/_assets/style.css
@@ -36,9 +36,8 @@ a:hover {
   border-radius: 4px;
   position: relative;
   width: 100%;
-
   height: 0;
-  padding-bottom: 75vh;
+  padding-bottom: 80vh;
 }
 
 .kc-header video {
@@ -60,7 +59,7 @@ a:hover {
   transition: all .2s;
   width: 100%;
   max-width: auto;
-
+  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -68,9 +67,9 @@ a:hover {
 }
 
 .kc-header img {
-  max-width: 150px;
+  max-width: 145px;
   min-width: 75px;
-  margin: 50px 0 25px;
+  margin: 20px 0;
 }
 
 .kc-header h1 {
@@ -80,7 +79,7 @@ a:hover {
 }
 
 .kc-header h2 {
-  margin: 0 0 20px;;
+  margin: 0 0 20px;
 }
 
 .kc-header a {
@@ -97,7 +96,7 @@ a:hover {
   display: inline-block;
   border-radius: 8px;
   padding: 10px;
-  margin: 10px 20px;
+  margin: 5px 20px;
   font-size: 1.35em;
   transition: background-color .4s;
   text-align: center;
@@ -293,6 +292,11 @@ a:hover {
     font-size: 4em;
   }
 
+  .kc-header img {
+    width: 50%;
+    max-width: 220px;
+  }
+
   .kc-events {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -320,6 +324,25 @@ a:hover {
 
   .kc-newsletter__field {
     display: inline-block;
+    margin: 0;
+  }
+}
+
+@media (orientation: landscape) {
+  .kc-header__container__logoGroup {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    text-align: left;
+    width: 100%;
+  }
+
+  .kc-header__container__logoGroup img {
+    margin: 0;
+    padding: 0 20px;
+  }
+  .kc-header__container__logoGroup h2 {
     margin: 0;
   }
 }
